# MetaCrucible

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  README.md  mise.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.sdd/plans/: 40-metacrucible-optimize.md  41-metacrucible-synthesize.md  issue-45-recorded-replay-ci-harness.md  issue-48-pypi-release.md
docs/adr/: 0028-define-claude-code-adapter-contract.md  0029-pin-benchmark-jsonl-v1-schema.md  0030-pin-receipt-and-evidence-bundle-v1-schema.md  0031-pin-workspace-masking-and-boundary-reporting.md  0032-pin-optimizer-pipeline-contract.md  0033-pin-static-review-profile-contract.md  0034-pin-control-plane-provider-configuration.md  0035-pin-mvp-cli-surface-and-operational-behavior.md  0036-pin-project-metadata-policy.md
docs/archive/: open-questions-2026-06-07.md
scripts/: release_gate.py
skills/metacrucible/: SKILL.md
src/metacrucible/: __main__.py  adapter_runtime.py  blocked_bundles.py  claude_stream_json.py  (+10 more)
tests/: test_adapter_runtime.py  test_apply_patch_revision_pure_logic.py  test_baseline_command.py  test_blocked_bundle_policy.py  test_bootstrap_command.py  test_build_task.py  test_check_pure_logic.py  test_ci_workflow.py  test_claude_stream_json.py  test_cleanup_command.py  test_cli_english_output.py  test_evaluate_command.py  test_exit_codes.py  test_init_command.py  test_inspect_command.py  test_local_real_adapter.py  test_metacrucible_skill.py  test_mise_toolchain.py  test_optimize_command.py  test_optimizer_stopping.py  test_promote_command.py  test_provider_config.py  test_receipt_pure_logic.py  test_release_docs.py  test_release_gate.py  test_release_workflow.py  test_replay_cli.py  test_replay_harness.py  test_repository_storage.py  test_review_command.py  test_rule_checks.py  test_skill_wrapper_skeleton.py  test_static_review_profiles.py  test_subagent_injection.py  test_synthesize_command.py
(+3 files in other folders)
