# MetaCrucible packaging skeleton (Issue #2).
#
# This file is the single source of truth for the project's build
# configuration and PyPI metadata. The build backend is hatchling
# (PEP 517). The `install` task in `mise.toml` performs an editable
# install via `uv pip install -e ".[dev]"`; `uv build --wheel` is the
# PEP 517 build dry-run.

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "metacrucible"
version = "0.1.0"
description = "A workbench for improving portable agent capabilities through repeatable optimization, evaluation, and review loops."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [
  { name = "Cunning-Kang" },
]
keywords = [
  "agent",
  "skill",
  "subagent",
  "optimization",
  "evaluation",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development",

]

[project.urls]
Homepage = "https://github.com/Cunning-Kang/MetaCrucible"
Repository = "https://github.com/Cunning-Kang/MetaCrucible"
Issues = "https://github.com/Cunning-Kang/MetaCrucible/issues"

[project.scripts]
metacrucible = "metacrucible.__main__:main"

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.hatch.build.targets.wheel]
packages = ["src/metacrucible"]

[tool.pytest.ini_options]
# Marker discipline for the three test layers (issue #45 + issue #46):
#   - `local_real` tests require a real runtime binary and the
#     `METACRUCIBLE_RUN_LOCAL_REAL=1` env gate. They are excluded
#     from `mise run test` and selected explicitly via
#     `mise run test-local-real`.
markers = [
    "local_real: opt-in tests that spawn a real Claude Code / oh-my-pi binary (deselect with -m 'not local_real')",
]
